--- a/cloudformation/ecs_cloudformation_withroles.yaml
+++ b/cloudformation/ecs_cloudformation_withroles.yaml
@@ -56,7 +56,7 @@ Resources:
               ReadOnly: true
             - SourceVolume: "configVolume"
               ContainerPath: "/config_cf.yaml"
-              ReadOnly: false
+              ReadOnly: true
           LogConfiguration: 
             LogDriver: "awslogs"
             Options: 
@@ -66,11 +66,11 @@ Resources:
           HealthCheck:
             command: 
               - "CMD-SHELL"
-              - "pgrep -f 'python3 -m ${ECSTaskFamily}' > /dev/null || exit 1"
+              - !Sub "pgrep -f 'python3 -m ${ECSTaskFamily}' > /dev/null || exit 1"
             interval: 30
-            timeout: 10
-            retries: 3
-            startPeriod: 15
+            timeout: 60
+            retries: 10
+            startPeriod: 60
       Volumes:
         - Name: configVolume
           Host:
